WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22343
runtime/Collector and runtime/JSLock are no longer used by Page.cpp
https://bugs.webkit.org/show_bug.cgi?id=22343
Summary
runtime/Collector and runtime/JSLock are no longer used by Page.cpp
Dimitri Glazkov (Google)
Reported
2008-11-18 15:09:43 PST
... so they can be removed.
Attachments
removes Collector, JSLock includes from Page.cpp
(834 bytes, patch)
2008-11-18 15:10 PST
,
Dimitri Glazkov (Google)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2008-11-18 15:10:16 PST
Created
attachment 25246
[details]
removes Collector, JSLock includes from Page.cpp
Darin Fisher (:fishd, Google)
Comment 2
2008-11-18 15:39:02 PST
http://trac.webkit.org/changeset/38580
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug