2008-11-18  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=22343
        Remove unused runtime/Collector, JSLock includes in Page.cpp

        * page/Page.cpp:



Canonical link: https://commits.webkit.org/30789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38580 268f45cc-cd09-0410-ab3c-d52691b4dbfc